# virglrenderer-adreno

./: .gitlab-ci.yml  README.rst  aarch64-android-api30.txt  config.h.meson  meson.build  meson_options.txt
.github/workflows/: android.yml  sync.yml
.gitlab-ci/expectations/host/: virgl-gles-fails.txt
.gitlab-ci/expectations/virt/: venus-fails.txt  virgl-gles-fails.txt
server/: main.c  render_protocol.h  render_server.c  render_socket.c  render_socket.h  render_worker.c
src/: drm_hw.h  meson.build
src/drm/: drm_renderer.c
src/drm/i915/: i915_ccmd.c  i915_ccmd.h  i915_object.c  i915_object.h  i915_renderer.c  i915_renderer.h  i915_resource.c  i915_resource.h
src/drm/panfrost/: panfrost_ccmd.c  panfrost_ccmd.h  panfrost_object.c  panfrost_object.h  panfrost_proto.h  panfrost_renderer.c  panfrost_renderer.h  panfrost_resource.c  panfrost_resource.h
src/gallium/auxiliary/tgsi/: tgsi_text.c
src/mesa/util/: os_misc.c
src/proxy/: proxy_client.c  proxy_server.c  proxy_socket.c  proxy_socket.h
src/venus/: vkr_command_buffer.c  vkr_common.c  vkr_common.h  vkr_context.c  vkr_descriptor_heap.c  vkr_descriptor_heap.h  vkr_device_memory.c  vkr_physical_device.c  vkr_ring.c
src/venus/venus-protocol/: vn_protocol_renderer.h  vn_protocol_renderer_buffer.h  vn_protocol_renderer_buffer_view.h  vn_protocol_renderer_command_buffer.h  vn_protocol_renderer_defines.h  vn_protocol_renderer_descriptor_heap.h  vn_protocol_renderer_descriptor_pool.h  vn_protocol_renderer_descriptor_set.h  vn_protocol_renderer_descriptor_set_layout.h  vn_protocol_renderer_device.h  vn_protocol_renderer_device_memory.h  vn_protocol_renderer_dispatches.h  vn_protocol_renderer_fence.h  vn_protocol_renderer_framebuffer.h  vn_protocol_renderer_handles.h  vn_protocol_renderer_image.h  vn_protocol_renderer_image_view.h  vn_protocol_renderer_info.h  vn_protocol_renderer_pipeline.h  vn_protocol_renderer_queue.h  vn_protocol_renderer_render_pass.h  vn_protocol_renderer_sampler.h  vn_protocol_renderer_semaphore.h  vn_protocol_renderer_structs.h  vn_protocol_renderer_transport.h  vn_protocol_renderer_types.h  vn_protocol_renderer_util.h
src/vrend/: iov.c  vrend_renderer.c  vrend_winsys.c  vrend_winsys_egl.c
vtest/: meson.build  threadpool.c  vtest_renderer.c
